--- a/SC-BOOK-CONFIG/config-info-dev.yml
+++ b/SC-BOOK-CONFIG/config-info-dev.yml
@@ -2,4 +2,4 @@
 cn: 
  springcloud: 
           book: 
-            config: I am the git configuration file from dev environment. I will edit it. Edited By Miles, lol! 
+            config: I am the git configuration file from dev environment. I will edit it. Edited By Miles 2, lol! 
